[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.16", features = ["derive"] }
memmap2 = "0.9.3"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
tempfile = "3.10.0"
kaitian-rt = { path = "../kaitian-rt", artifact = "staticlib" }

[dependencies.iced-x86]
version = "1.20.0"
features = ["code_asm"]
